--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "date-fns": "^2.11.0"
+    "date-fns": "^2.11.0",
+    "fs-extra": "^9.0.0"
   }
 }
