generate sponsors and speakers

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "date-fns": "^2.11.0",
-    "fs-extra": "^9.0.0"
+    "fs-extra": "^9.0.0",
+    "htmlencode": "^0.0.4"
   }
 }
