--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "date-fns": "^2.11.0",
     "fs-extra": "^9.0.0",
-    "htmlencode": "^0.0.4"
+    "htmlencode": "^0.0.4",
+    "image-downloader": "^3.5.0"
   }
 }
